--- a/pom.xml
+++ b/pom.xml
@@ -203,17 +203,16 @@
             <artifactId>gherkin</artifactId>
             <version>2.12.0</version>
         </dependency>
-        <!--<dependency>-->
-            <!--<groupId>info.cukes</groupId>-->
-            <!--<artifactId>cucumber-html</artifactId>-->
-            <!--<version>0.2.1</version>-->
-        <!--</dependency>-->
         <dependency>
             <groupId>org.hamcrest</groupId>
             <artifactId>hamcrest-library</artifactId>
             <version>1.2.1</version>
         </dependency>
-
+        <dependency>
+            <groupId>com.jayway.jsonpath</groupId>
+            <artifactId>json-path</artifactId>
+            <version>0.8.1</version>
+        </dependency>
     </dependencies>
 
     <build>
