--- a/pom.xml
+++ b/pom.xml
@@ -297,6 +297,45 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.15</version>
             </plugin>
+            <!--<plugin>-->
+                <!--<groupId>org.codehaus.cargo</groupId>-->
+                <!--<artifactId>cargo-maven2-plugin</artifactId>-->
+                <!--<version>${cargo.plugin.version}</version>-->
+                <!--<configuration>-->
+
+                    <!--&lt;!&ndash; Container configuration &ndash;&gt;-->
+                    <!--<container>-->
+                        <!--<containerId>${cargo.container.id}</containerId>-->
+                        <!--<type>${cargo.container.type}</type>-->
+                    <!--</container>-->
+                    <!--&lt;!&ndash; Configuration to use with the container &ndash;&gt;-->
+                    <!--<configuration>-->
+                        <!--<type>runtime</type>-->
+                        <!--<properties>-->
+                            <!--<cargo.server.settings>${cargo.server.settings}</cargo.server.settings>-->
+                        <!--</properties>-->
+                    <!--</configuration>-->
+
+                    <!--&lt;!&ndash; Deployer configuration &ndash;&gt;-->
+                    <!--<deployer>-->
+                        <!--<type>${cargo.container.type}</type>-->
+                    <!--</deployer>-->
+
+                    <!--&lt;!&ndash; Deployables configuration &ndash;&gt;-->
+                    <!--<deployables>-->
+                        <!--<deployable>-->
+                            <!--<groupId>${project.groupId}</groupId>-->
+                            <!--<artifactId>${project.artifactId}</artifactId>-->
+                            <!--<type>war</type>-->
+                            <!--<properties>-->
+                                <!--<context>/${project.artifactId}</context>-->
+                            <!--</properties>-->
+                        <!--</deployable>-->
+                    <!--</deployables>-->
+
+                <!--</configuration>-->
+            <!--</plugin>-->
+
         </plugins>
     </build>
 
