--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -1,7 +1,11 @@
 database.driver=org.hsqldb.jdbcDriver
-database.url=jdbc:hsqldb:mem:user
+database.url=jdbc:hsqldb:mem:mydb
 database.user=sa
 database.password=
 
 hibernate.dialect=org.hibernate.dialect.HSQLDialect
 hibernate.show_sql=true
+
+# In order to debug the database you need to manually run H2
+#database.url=jdbc:hsqldb:hsql://localhost/mydb
+#java -cp ~/.m2/repository/org/hsqldb/hsqld2.2.9/hsqldb-2.2.9.jar org.hsqldb.Server -database.0 file:mydb -dbname.0 mydb
