--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
     <properties>
         <common.logging.version>1.1.3</common.logging.version>
         <jackson.version>1.9.11</jackson.version>
-        <cucumber.jvm.version>1.1.4-SNAPSHOT</cucumber.jvm.version>
+        <cucumber.jvm.version>1.1.4</cucumber.jvm.version>
         <servlet.version>3.0.1</servlet.version>
         <endorsed.dir>${project.build.directory}/endorsed</endorsed.dir>
         <spring.version>3.2.2.RELEASE</spring.version>
@@ -335,6 +335,27 @@
 
                 <!--</configuration>-->
             <!--</plugin>-->
+<plugin>
+    <groupId>org.apache.maven.plugins</groupId>
+    <artifactId>maven-dependency-plugin</artifactId>
+    <version>2.3</version>
+    <executions>
+        <execution>
+            <phase>package</phase>
+            <goals><goal>copy</goal></goals>
+            <configuration>
+                <artifactItems>
+                    <artifactItem>
+                        <groupId>org.mortbay.jetty</groupId>
+                        <artifactId>jetty-runner</artifactId>
+                        <version>7.4.5.v20110725</version>
+                        <destFileName>jetty-runner.jar</destFileName>
+                    </artifactItem>
+                </artifactItems>
+            </configuration>
+        </execution>
+    </executions>
+</plugin>
 
         </plugins>
     </build>
